...
                        const AddToFoodsDecision(
                          action: AddToFoodsAction.onlyShoppingList,
                        ),
                      );
                    },
                    child: const Text(
                      'Nur Einkaufsliste',
                      style: TextStyle(
                        fontSize: 13,
                        fontWeight: FontWeight.w600,
                      ),
                    ),
                  ),
...
