...
    Food(id: 'f_98', name: 'Seelachs', createdAt: DateTime.now()),
    Food(id: 'f_99', name: 'Garnelen', createdAt: DateTime.now()),
    Food(id: 'f_100', name: 'Forelle', createdAt: DateTime.now()),
    Food(id: 'f_101', name: 'Kabeljau', createdAt: DateTime.now()),

    // Milchprodukte
    Food(id: 'f_102', name: 'Milch', createdAt: DateTime.now()),
    Food(id: 'f_103', name: 'Hafermilch', createdAt: DateTime.now()),
    Food(id: 'f_104', name: 'Sahne', createdAt: DateTime.now()),
    Food(id: 'f_105', name: 'Kochsahne', createdAt: DateTime.now()),
    Food(id: 'f_106', name: 'Saure Sahne', createdAt: DateTime.now()),
    Food(id: 'f_107', name: 'Schmand', createdAt: DateTime.now()),
    Food(id: 'f_108', name: 'Joghurt', createdAt: DateTime.now()),
...
